# ca-token-usage-monitors

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: run-tests.yml
documents/: 20260219_GEMINI_REFACTOR.md  GEMINI_MIGRATION_REFACTOR.md  NOTES_ccusage.md  TDD_CLAUDE_INGESTION.md  TDD_CODEX_INGESTION.md  TDD_GEMINI_INGESTION.md  TDD_INGESTION.md  TDD_OPENCODE_INGESTION.md  TDD_PI_AGENT_INGESTION.md
scripts/: analyze_turn_context_token_counts.py  compact_db.py
src/ca_token_monitor_internal/: __init__.py  database.py  paths.py
src/codex_token_usage/: __init__.py  __main__.py  cli.py
src/codex_token_usage/ingestion/: __init__.py  dedupe.py  errors.py  parser.py  repository.py  schemas.py
src/codex_token_usage/stats/: __init__.py  price_spec.py  render.py  repository.py  schemas.py  service.py
src/coding_agent_usage_monitors/: __init__.py
src/coding_agent_usage_monitors/claude_token_usage/: __main__.py  cli.py
src/coding_agent_usage_monitors/codex_token_usage/: cli.py
src/gemini_token_usage/: __init__.py  __main__.py  cli.py
src/model_pricing/: __init__.py  price_spec.py
src/opencode_token_usage/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
tests/claude_ingestion/: test_parser.py  test_service.py
tests/claude_stats/: test_claude_stats_render.py  test_claude_stats_service.py
tests/codex_cli/: test_cli.py
tests/codex_ingestion/: test_dedupe.py  test_parser.py  test_service.py
tests/gemini_cli/: test_gemini_cli.py  test_gemini_ingest_cli.py
tests/gemini_ingestion/: test_gemini_ingestion_parser.py  test_gemini_ingestion_repository.py  test_gemini_ingestion_service.py  test_source_bookkeeping_service.py
tests/gemini_preprocessing/: test_metadata.py  test_resolve_input.py
tests/gemini_stats/: test_gemini_stats_service.py
tests/ingestion/: test_dedupe.py  test_service.py
tests/model_pricing/: test_price_spec.py
tests/opencode_cli/: test_opencode_cli.py
tests/opencode_ingestion/: test_opencode_ingestion_repository.py  test_opencode_ingestion_service.py  test_opencode_source_reader.py
tests/opencode_stats/: test_opencode_stats_render.py  test_opencode_stats_service.py
tests/pi_ingestion/: test_parser.py  test_repository.py  test_service.py
tests/pi_stats/: test_pi_stats_render.py  test_pi_stats_service.py
tests/stats/: test_stats_service.py
(+93 files in other folders)
