[project]
name = "coding-agent-token-monitor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "orjson>=3.11.7",
    "typer>=0.23.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "pytest>=9.0.2",
    "pytest-env>=1.3.2",
    "ruff>=0.15.1",
]
