[project]
name = "coding-agent-token-monitor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "orjson>=3.11.7",
    "rich>=14.3.2",
    "typer>=0.23.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "pytest>=9.0.2",
    "pytest-env>=1.3.2",
    "ruff>=0.15.1",
]

[tool.pyright]
reportCallInDefaultInitializer = false

[project.scripts]
codex-token-usage = "codex_token_usage.cli:module_cli_entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_token_usage"]
