[project]
name = "coding-agent-token-monitors"
version = "0.2.5"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "orjson>=3.11.7",
    "orjsonl>=1.0.0",
    "rich>=14.3.2",
    "typer>=0.23.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "pytest>=9.0.2",
    "pytest-env>=1.3.2",
    "ruff>=0.15.1",
]

[tool.pyright]
reportCallInDefaultInitializer = false

[project.scripts]
codex-token-usage = "coding_agent_usage_monitors.codex_token_usage.cli:module_cli_entry_point"
gemini-token-usage = "coding_agent_usage_monitors.gemini_token_usage.cli:module_cli_entry_point"
opencode-token-usage = "coding_agent_usage_monitors.opencode_token_usage.cli:module_cli_entry_point"
claude-token-usage = "coding_agent_usage_monitors.claude_token_usage.cli:module_cli_entry_point"
pi-token-usage = "coding_agent_usage_monitors.pi_token_usage.cli:module_cli_entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/coding_agent_usage_monitors",
]
include = [
    "src/coding_agent_usage_monitors/common/model_pricing/*.json",
]


[tool.ruff]
line-length = 120
target-version = "py313"
